--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <hr>
             <br>
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 box">
                     <a href="" data-toggle="modal" data-target="#modal1" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -131,7 +131,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 box">
                     <a href="" data-toggle="modal" data-target="#modal2" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -146,7 +146,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 box">
                     <a href="" data-toggle="modal" data-target="#modal3" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -161,7 +161,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 box">
                     <a href="" data-toggle="modal" data-target="#modal4" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -176,7 +176,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 box">
                     <a href="" data-toggle="modal" data-target="#modal5" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -191,7 +191,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 box">
                     <a href="" data-toggle="modal" data-target="#modal6" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -220,7 +220,7 @@
       </div>
       <div class="modal-body">
         <p>An app created for a client using the Ionic Framework and AngularJS library. Calculates mortgage, return on investment, monthly payments, and more based on a multitude of parameters. Data is saved across views to provide concurrency.</p>
-        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/1a.jpg" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
@@ -242,7 +242,7 @@
       </div>
       <div class="modal-body">
         <p>This app was created using the Ionic Framework, Mapbox and the AngularJS library. It provides turn by turn directions for driving, walking and transiting between two points. Options include changing the map type, zoom level, language and drag abilities.</p>
-        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/2a.jpg" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
@@ -264,7 +264,7 @@
       </div>
       <div class="modal-body">
         <p>Various python scripts created trying to learn python. Uses the PRAW library to access Reddit API. Retrieve the latest top posts of a subreddit, upvote/downvote a specific user and reply to particular keywords in a subreddit. </p>
-        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/3a.jpg" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
@@ -285,7 +285,7 @@
       </div>
       <div class="modal-body">
         <p>Designed, developed and manage a real estate website for a client. Website uses HTML/CSS as well as the MLS API to retrieve and update the current properties available and sold.</p>
-        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/4a.jpg" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
@@ -306,7 +306,7 @@
       </div>
       <div class="modal-body">
         <p>As part of a team of BCIT students, we built a wordpress website with backend. The website features a forum, extensive user profile customization, activity walls, private messaging, database to hold personal records and a customized timetracker calculator.</p>
-        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/5a.jpg" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
@@ -327,7 +327,7 @@
       </div>
       <div class="modal-body">
         <p>A compass object demonstration built in Android Studio written in Java. Alternates between using the phone's accelerometer and magnetometer to simulate a fairly accurate compass object.</p>
-        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/6a.jpg" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
@@ -347,12 +347,12 @@
                     <div class="col-md-4 col-md-offset-2">
                         <i class="fa fa-4x fa-file-pdf-o"></i>
                         <br><br>
-                        <a href="resume.pdf" class="btn btn-primary" download>Download</a>
+                        <a href="Resume.pdf" class="btn btn-primary" download>Download</a>
                     </div>
                     <div class="col-md-4">
                         <i class="fa fa-4x fa-coffee"></i>
                         <br><br>
-                        <a href="resume.pdf" class="btn btn-primary" target="new">View Online</a>
+                        <a href="Resume.pdf" class="btn btn-primary" target="new">View Online</a>
                     </div>
                 </div>
             </div>
@@ -401,6 +401,53 @@
                 <button type="submit" class="btn btn-primary btn-lg">Submit Message</button>
             </div>
         </form><!-- End contact-form --> 
+    </section>
+
+
+            <!-- Footer -->
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3>Location</h3>
+                        <p>Richmond, BC
+                            <br>Canada</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Social Media</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://www.facebook.com/gerardngjr" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/gerardng" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-github"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/gngversion1" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/gerard-ng-46b2ba1b?trk=hp-identity-name" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>About the site</h3>
+                        <p>This site was created using Bootstrap.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Designed by and Copyright &copy; Gerard Ng 2016
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
