--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <!-- Theme CSS -->
     <link href="css/creative.css" rel="stylesheet">
+    <link href="css/hera.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -116,95 +118,61 @@
             <hr>
             <br>
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6 box">
-                    <a href="" data-toggle="modal" data-target="#modal1" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Android App
-                                </div>
-                                <div class="project-name">
-                                    Mortgage Calculator
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 box">
-                    <a href="" data-toggle="modal" data-target="#modal2" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Android App
-                                </div>
-                                <div class="project-name">
-                                    Mapbox Directions
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 box">
-                    <a href="" data-toggle="modal" data-target="#modal3" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Python Script
-                                </div>
-                                <div class="project-name">
-                                    Reddit Bot
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 box">
-                    <a href="" data-toggle="modal" data-target="#modal4" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    HTML/CSS/MyRealPages 
-                                </div>
-                                <div class="project-name">
-                                    Real Estate Website
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 box">
-                    <a href="" data-toggle="modal" data-target="#modal5" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Wordpress
-                                </div>
-                                <div class="project-name">
-                                    BGActors
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 box">
-                    <a href="" data-toggle="modal" data-target="#modal6" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Android Studio
-                                </div>
-                                <div class="project-name">
-                                    Compass Object
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+                <div class="grid">
+                    <figure class="effect-layla">
+                            <img src="img/portfolio/thumbnails/1b.jpg" alt=""/>
+                            <figcaption>
+                                <h2>Entote <span>Mortgage Calculator</span></h2>
+                                <p>Hybrid App - Ionic Framework</p>
+                                <a href="#">View more</a>
+                                 <a href="" data-toggle="modal" data-target="#modal1" class="portfolio-box"></a>         
+                            </figcaption>  
+                    </figure>
+                    <figure class="effect-layla">
+                        <img src="img/portfolio/thumbnails/2b.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Mapbox <span>Directions</span></h2>
+                            <p>Hybrid App - Mapbox GL and Ionic Framework</p>
+                            <a href="#">View more</a>
+                            <a href="" data-toggle="modal" data-target="#modal2" class="portfolio-box"></a>    
+                        </figcaption>  
+                    </figure>         
+                    <figure class="effect-layla">
+                        <img src="img/portfolio/thumbnails/3b.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Reddit <span>Bot</span></h2>
+                            <p>Python scripts</p>
+                            <a href="#">View more</a>
+                            <a href="" data-toggle="modal" data-target="#modal3" class="portfolio-box"></a>    
+                        </figcaption>           
+                    </figure>
+                    <figure class="effect-layla">
+                        <img src="img/portfolio/thumbnails/4b.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Entote <span>Realestate</span></h2>
+                            <p>Bootstrap</p>
+                            <a href="#">View more</a>
+                            <a href="" data-toggle="modal" data-target="#modal4" class="portfolio-box"></a>    
+                        </figcaption>           
+                    </figure>
+                    <figure class="effect-layla">
+                        <img src="img/portfolio/thumbnails/5b.jpg" alt=""/>
+                        <figcaption>
+                            <h2>BG <span>Actors</span></h2>
+                            <p>Wordpress</p>
+                            <a href="#">View more</a>
+                            <a href="" data-toggle="modal" data-target="#modal5" class="portfolio-box"></a>    
+                        </figcaption>           
+                    </figure>
+                    <figure class="effect-layla">
+                        <img src="img/portfolio/thumbnails/6b.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Compass <span>Object</span></h2>
+                            <p>Android Studio</p>
+                            <a href="#">View more</a>
+                            <a href="" data-toggle="modal" data-target="#modal6" class="portfolio-box"></a>    
+                        </figcaption>           
+                    </figure>
                 </div>
             </div>
         </div>
@@ -220,7 +188,7 @@
       </div>
       <div class="modal-body">
         <p>An app created for a client using the Ionic Framework and AngularJS library. Calculates mortgage, return on investment, monthly payments, and more based on a multitude of parameters. Data is saved across views to provide concurrency.</p>
-        <img src="img/portfolio/thumbnails/1a.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/1a.jpg" class="img-responsive" alt="" width="150px">
 
       </div>
       <div class="modal-footer">
@@ -242,7 +210,7 @@
       </div>
       <div class="modal-body">
         <p>This app was created using the Ionic Framework, Mapbox and the AngularJS library. It provides turn by turn directions for driving, walking and transiting between two points. Options include changing the map type, zoom level, language and drag abilities.</p>
-        <img src="img/portfolio/thumbnails/2a.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/2a.jpg" class="img-responsive" alt="" width="150px">
 
       </div>
       <div class="modal-footer">
@@ -264,7 +232,7 @@
       </div>
       <div class="modal-body">
         <p>Various python scripts created trying to learn python. Uses the PRAW library to access Reddit API. Retrieve the latest top posts of a subreddit, upvote/downvote a specific user and reply to particular keywords in a subreddit. </p>
-        <img src="img/portfolio/thumbnails/3a.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/3a.jpg" class="img-responsive" alt="" width="150px">
 
       </div>
       <div class="modal-footer">
@@ -327,7 +295,7 @@
       </div>
       <div class="modal-body">
         <p>A compass object demonstration built in Android Studio written in Java. Alternates between using the phone's accelerometer and magnetometer to simulate a fairly accurate compass object.</p>
-        <img src="img/portfolio/thumbnails/6a.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/6a.jpg" class="img-responsive" alt="" width="150px">
 
       </div>
       <div class="modal-footer">
@@ -403,7 +371,12 @@
         </form><!-- End contact-form --> 
     </section>
 
+    <section>
+        <div class="container-fluid">
 
+
+        </div>
+    </section>
             <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
