--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           
           <div class="col-sm-7">
           <h3>Get in Touch</h3>
-<form class="form-horizontal" role="form" method="post" action="contact.php">
+<form class="form-horizontal" role="form" method="get" action="contact.php">
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
