--- a/index.html
+++ b/index.html
@@ -356,46 +356,31 @@
           
           <div class="col-sm-7">
           <h3>Get in Touch</h3>
-<form class="form-horizontal" role="form" method="get" action="contact.php">
-    <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Name</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="<?php echo htmlspecialchars($_POST['name']); ?>">
-            <?php echo "<p class='text-danger'>$errName</p>";?>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="email" class="col-sm-2 control-label">Email</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="<?php echo htmlspecialchars($_POST['email']); ?>">
-            <?php echo "<p class='text-danger'>$errEmail</p>";?>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="message" class="col-sm-2 control-label">Message</label>
-        <div class="col-sm-10">
-            <textarea class="form-control" rows="4" name="message"><?php echo htmlspecialchars($_POST['message']);?></textarea>
-            <?php echo "<p class='text-danger'>$errMessage</p>";?>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
-            <?php echo "<p class='text-danger'>$errHuman</p>";?>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-10 col-sm-offset-2">
-            <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-10 col-sm-offset-2">
-            <?php echo $result; ?>  
-        </div>
-    </div>
-</form> 
+          <form class="form-horizontal" id="contact-form" name='form' role='form' method='post' action='https://formspree.io/gerardngjr@yahoo.com'>
+            <div class="control-group">
+              <label class="control-label" for="name">Name</label>
+              <div class="controls">
+                <input type="text" name="name" id="name" placeholder="Your name" class="form-control input-lg ">
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="email">Email Address</label>
+              <div class="controls">
+                <input type="text" name="_replyto" id="email" placeholder="Your email address" class="form-control input-lg">
+              </div>
+            </div>
+            <input type="hidden" name="_subject" value="Formsfree submission" />
+            <div class="control-group">
+              <label class="control-label" for="message">Message</label>
+              <div class="controls">
+                <textarea name="msg" id="message" rows="8" class="form-control input-lg" placeholder="Your message"></textarea>
+              </div>
+            </div>
+            <div class="form-actions">
+                <br>
+                <input type="submit" value="Send">
+            </div>
+        </form>
         <!-- End contact-form --> 
     </section>
 
