--- a/index.html
+++ b/index.html
@@ -369,13 +369,14 @@
                 <input type="text" name="_replyto" id="email" placeholder="Your email address" class="form-control input-lg">
               </div>
             </div>
-            <input type="hidden" name="_subject" value="Formsfree submission" />
             <div class="control-group">
               <label class="control-label" for="message">Message</label>
               <div class="controls">
                 <textarea name="msg" id="message" rows="8" class="form-control input-lg" placeholder="Your message"></textarea>
               </div>
             </div>
+            <input type="hidden" name="_subject" value="Formsfree submission" />
+            <input type="hidden" name="_next" value="https://gerardng.github.io/" />
             <div class="form-actions">
                 <br>
                 <input type="submit" value="Send">
