--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                       <img src="img/gengar.png" class="img-responsive" alt="Responsive image"> 
+                       <img src="img/feature-mobile.png" class="img-responsive" style="max-height: 400px" alt="Responsive image"> 
                     </div>
                     <div class="col-md-8 text-center">
                         <h2 class="section-heading">Hi, I'm Gerard Ng</h2>
@@ -110,13 +110,13 @@
                         <hr>
                         <dl class="dl-horizontal lead">
                             <dt>Web</dt>
-                            <dd>HTML5, CSS3, Bootstrap, JavaScript, jQuery, Angular JS, PHP, node.js</dd>
+                            <dd>HTML5, CSS3, Bootstrap, JavaScript, jQuery, Angular, PHP, node.js</dd>
                             <dt>Others</dt>
-                            <dd>Objective-C, Python, Java, C++, C#, Bash script</dd>
+                            <dd>Python, Java, C++, C#, Bash script</dd>
                             <dt>Databases</dt>
-                            <dd>MySQL, MongoDB, Firebase</dd>
+                            <dd>MySQL, MongoDB, Firebase, SQLite</dd>
                             <dt>Design</dt>
-                            <dd>Photoshop, Ionic Framework</dd>
+                            <dd>Bootstrap, Ionic</dd>
                         </dl>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
             <div class="row no-gutter popup-gallery">
                 <div class="grid">
                     <figure class="effect-layla">
-                            <img src="img/portfolio/thumbnails/1b.jpg" alt=""/>
+                            <img src="img/portfolio/thumbnails/app-screen.png" alt=""/>
                             <figcaption>
                                 <h2>Entote <span>Mortgage Calculator</span></h2>
                                 <p>Hybrid App - Ionic Framework</p>
@@ -140,14 +140,23 @@
                             </figcaption>  
                     </figure>
                     <figure class="effect-layla">
-                        <img src="img/portfolio/thumbnails/2b.jpg" alt=""/>
+                        <img src="img/portfolio/thumbnails/mapboxdirections1.png" alt=""/>
                         <figcaption>
                             <h2>Mapbox <span>Directions</span></h2>
                             <p>Hybrid App - Mapbox GL and Ionic Framework</p>
                             <a href="#">View more</a>
                             <a href="" data-toggle="modal" data-target="#modal2" class="portfolio-box"></a>    
                         </figcaption>  
-                    </figure>         
+                    </figure>
+                    <figure class="effect-layla">
+                        <img src="img/portfolio/thumbnails/eleanortanwebsite.png" alt=""/>
+                        <figcaption>
+                            <h2>Eleanor Tan <span>Real Estate</span></h2>
+                            <p>Bootstrap</p>
+                            <a href="#">View more</a>
+                            <a href="" data-toggle="modal" data-target="#modal7" class="portfolio-box"></a>    
+                        </figcaption>           
+                    </figure>                             
                     <figure class="effect-layla">
                         <img src="img/portfolio/thumbnails/3b.jpg" alt=""/>
                         <figcaption>
@@ -158,9 +167,9 @@
                         </figcaption>           
                     </figure>
                     <figure class="effect-layla">
-                        <img src="img/portfolio/thumbnails/4b.jpg" alt=""/>
+                        <img src="img/portfolio/thumbnails/entotewebsite.png" alt=""/>
                         <figcaption>
-                            <h2>Entote <span>Realestate</span></h2>
+                            <h2>Entote <span>Real Estate</span></h2>
                             <p>Bootstrap</p>
                             <a href="#">View more</a>
                             <a href="" data-toggle="modal" data-target="#modal4" class="portfolio-box"></a>    
@@ -199,11 +208,11 @@
       </div>
       <div class="modal-body">
         <p>An app created for a client using the Ionic Framework and AngularJS library. Calculates mortgage, return on investment, monthly payments, and more based on a multitude of parameters. Data is saved across views to provide concurrency.</p>
-        <img src="img/portfolio/thumbnails/1a.jpg" class="img-responsive" alt="" width="150px">
+        <img src="img/portfolio/thumbnails/mortgagecalculator1.png" class="img-responsive" alt="" width="150px">
 
       </div>
       <div class="modal-footer">
-        <a href="STORE LINK HERE" class="btn btn-success" target="_blank">App Store</a>
+        <a href="https://play.google.com/store/apps/details?id=com.gerardngjr.entotemortgagecalculator" class="btn btn-success" target="_blank">App Store</a>
         <a href="https://github.com/gerardng/mortgageCalculator" class="btn btn-warning" target="_blank">Github</a>
         <button type="button" class="btn btn-primary"  data-dismiss="modal">Close</button>
       </div>
@@ -221,11 +230,10 @@
       </div>
       <div class="modal-body">
         <p>This app was created using the Ionic Framework, Mapbox and the AngularJS library. It provides turn by turn directions for driving, walking and transiting between two points. Options include changing the map type, zoom level, language and drag abilities.</p>
-        <img src="img/portfolio/thumbnails/2a.jpg" class="img-responsive" alt="" width="150px">
-
+        <img src="img/portfolio/thumbnails/mapboxdirections2.png" class="img-responsive" alt="" width="150px">
       </div>
       <div class="modal-footer">
-        <a href="STORE LINK HERE" class="btn btn-success" target="_blank">App Store</a>
+        <a href="https://play.google.com/store/apps/details?id=com.gerardngjr.mapboxdirections" class="btn btn-success" target="_blank">App Store</a>
         <a href="https://github.com/gerardng/mapboxDirections" class="btn btn-warning" target="_blank">Github</a>
         <button type="button" class="btn btn-primary"  data-dismiss="modal">Close</button>
       </div>
@@ -264,11 +272,11 @@
       </div>
       <div class="modal-body">
         <p>Designed, developed and manage a real estate website for a client. Website uses HTML/CSS as well as the MLS API to retrieve and update the current properties available and sold.</p>
-        <img src="img/portfolio/thumbnails/4a.jpg" class="img-responsive" alt="">
+        <img src="img/portfolio/thumbnails/entotewebsite2.png" class="img-responsive" alt="">
 
       </div>
       <div class="modal-footer">
-        <a href="http://jason-entote.myrealpagewebsite.com/" class="btn btn-info" target="_blank">Web URL</a>
+        <a href="http://jasonentote.com/" class="btn btn-info" target="_blank">Web URL</a>
         <button type="button" class="btn btn-primary"  data-dismiss="modal">Close</button>
       </div>
     </div>
@@ -317,6 +325,27 @@
   </div>
 </div>
 
+<!-- id modal7 -->
+<div class="modal fade" id="modal7" tabindex="-7" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Eleanor Sy Tan Real Estate</h4>
+      </div>
+      <div class="modal-body">
+        <p>Designed, developed and manage a real estate website for a client. Website uses HTML/CSS as well as the MLS API to retrieve and update the current properties available and sold.</p>
+        <img src="img/portfolio/thumbnails/eleanortanwebsite2.png" class="img-responsive" alt="">
+
+      </div>
+      <div class="modal-footer">
+        <a href="http://eleanorsytan.com/" class="btn btn-info" target="_blank">Web URL</a>
+        <button type="button" class="btn btn-primary"  data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <aside class="bg-dark" id="resume">
         <div class="container text-center">
             <div class="call-to-action">
@@ -356,7 +385,7 @@
           
           <div class="col-sm-7">
           <h3>Get in Touch</h3>
-          <form class="form-horizontal" id="contact-form" name='form' role='form' method='post' action='https://formspree.io/gerardngjr@yahoo.com'>
+          <form class="form-horizontal" id="contact-form" name='form' role='form' method='post'>
             <div class="control-group">
               <label class="control-label" for="name">Name</label>
               <div class="controls">
@@ -379,14 +408,14 @@
             <input type="hidden" name="_next" value="https://gerardng.github.io/" />
             <div class="form-actions">
                 <br>
-                <input type="submit" value="Send">
+                <button type="submit" class="btn btn-default">Submit</button>
             </div>
         </form>
         <!-- End contact-form --> 
     </section>
 
     <section>
-        <div class="container-fluid">
+        <div class="container">
 
 
         </div>
@@ -464,6 +493,12 @@
               });
         });
     </script>
+
+    <!-- Formsspree -->
+    <script>
+        var contactform =  document.getElementById('contactform');
+        contactform.setAttribute('action', '//formspree.io/' + 'gerardngjr' + '@' + 'yahoo' + '.' + 'com');
+    </script> 
 
 </body>
 
