--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="col-md-8 text-center">
                         <h2 class="section-heading">Hi, I'm Gerard Ng</h2>
                         <hr>
-                        <p class="">I'm a software developer enthustiastic about building websites, mobile applications and a proud member of Team Mystic! I am about to complete the rigorous <a href="http://www.bcit.ca/study/programs/5500dipma">BCIT Computer Systems Technology</a> program by December 2016. I am passionate about programming and technology as a whole. I grew up in the Philippines but spent my entire post-secondary life in Richmond, BC.</p>
+                        <p class="">I'm a software developer enthustiastic about building websites, mobile applications and a proud member of Team Mystic! I am about to complete the rigorous <a href="http://www.bcit.ca/study/programs/5500dipma" target="_blank">BCIT Computer Systems Technology</a> program by December 2016. I am passionate about programming and technology as a whole. I grew up in the Philippines but spent my entire post-secondary life in Richmond, BC.</p>
                         </div>
                 </div>
          </div>
@@ -379,7 +379,7 @@
           <div class="col-sm-5">
             <h3>Contact Info</h3>
             <p><i class="fa fa-map-marker"></i> Richmond, BC <br> Canada</p>
-            <p><i class="fa fa-phone"></i> (778) 8980424</p>
+            <p><i class="fa fa-phone"></i> Upon request</p>
             <p><i class="fa fa-envelope-o"></i>  gerardngjr@gmail.com</p>
           </div>
           
@@ -405,7 +405,7 @@
               </div>
             </div>
             <input type="hidden" name="_subject" value="Formsfree submission" />
-            <input type="hidden" name="_next" value="https://gerardng.github.io/" />
+            <input type="hidden" name="_next" value="http://gerardng.github.io/" />
             <div class="form-actions">
                 <br>
                 <button type="submit" class="btn btn-default">Submit</button>
@@ -434,16 +434,13 @@
                         <h3>Social Media</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/gerardngjr" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-facebook"></i></a>
+                                <a href="https://github.com/gerardng" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-github" target="_blank"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/gerardng" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-github"></i></a>
+                                <a href="https://twitter.com/gngversion1" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-twitter" target="_blank"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/gngversion1" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/gerard-ng-46b2ba1b?trk=hp-identity-name" class="btn-social btn-outline"><i class="hi-icon fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/gerard-ng-46b2ba1b?trk=hp-identity-name" class="btn-social btn-outline" target="_blank"><i class="hi-icon fa fa-fw fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
