--- a/index.html
+++ b/index.html
@@ -458,6 +458,13 @@
                         Designed by and Copyright &copy; Gerard Ng 2016
                     </div>
                 </div>
+
+                <form action="https://formspree.io/gerardngjr@yahoo.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form>
             </div>
         </div>
     </footer>
