--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           
           <div class="col-sm-7">
           <h3>Get in Touch</h3>
-          <form class="form-horizontal" id="contact-form" name='form' role='form' method='post'>
+          <form class="form-horizontal" id="contact-form" action="https://formspree.io/gerardngjr@yahoo.com" method='post'>
             <div class="control-group">
               <label class="control-label" for="name">Name</label>
               <div class="controls">
@@ -458,13 +458,6 @@
                         Designed by and Copyright &copy; Gerard Ng 2016
                     </div>
                 </div>
-
-                <form action="https://formspree.io/gerardngjr@yahoo.com"
-      method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
-</form>
             </div>
         </div>
     </footer>
