changed resume.pdf file input path
Signed-off-by: gerardng <gerardngjr@gmail.com>

--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@
                     <div class="col-md-4 col-md-offset-2">
                         <i class="fa fa-4x fa-file-pdf-o"></i>
                         <br><br>
-                        <a href="Resume.pdf" class="btn btn-primary" download>Download</a>
+                        <a href="resume.pdf" class="btn btn-primary" download>Download</a>
                     </div>
                     <div class="col-md-4">
                         <i class="fa fa-4x fa-coffee"></i>
                         <br><br>
-                        <a href="Resume.pdf" class="btn btn-primary" target="new">View Online</a>
+                        <a href="resume.pdf" class="btn btn-primary" target="new">View Online</a>
                     </div>
                 </div>
             </div>
